--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,7 @@
 <resources>
     <string name="app_name">Planner</string>
-    <string name="очистить">Очистить список</string>
+    <string name="your_api_key">my_api_key</string>
+    <string name="clear_list">Очистить список</string>
     <string name="clearSetting">Очистить данные о пароле</string>
     <string name="progress">Прогресс</string>
     <string name="clear_minutes">Очистить поле всего минут</string>
@@ -98,6 +99,13 @@
     <string name="to_delete">Удалить</string>
     <string name="color_dont_choosed">Цвет не выбран</string>
     <string name="share_app">Поделиться</string>
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="add_title">Введите текст</string>
+    <string name="add_icon">Выберите картинку: </string>
+    <string name="attention">Внимание!</string>
+    <string name="task_dialog_message">Вы уверены, что хотите удалить?</string>
+    <string name="Cancel">Отмена</string>
+    <string name="choosed">Вы выбрали: </string>
+    <string name="change_image_title">Поменять картинку и название категории</string>
+    <string name="remove_category">Удалить категорию</string>
+    <string name="what_to_do">Что бы вы хотели сделать?</string>
 </resources>
