--- a/app/src/main/res/values-ko/strings.xml
+++ b/app/src/main/res/values-ko/strings.xml
@@ -46,7 +46,7 @@
     <string name="done_tasks">작업 실행</string>
     <string name="fast_add_your_event"><![CDATA[이벤트를 빠르게 추가하고 날짜를 빠르게 전환하고 주보기]]></string>
     <string name="list_tasks_help_you">할 일 목록은 하루를 채우고 작업을 완료하는 데 도움이됩니다.</string>
-    <string name="record_idea_simple">아이디어 쓰기</string>
+    <string name="record_idea_title">아이디어 쓰기</string>
     <string name="check_timing">타이밍 추적</string>
     <string name="most_effect_idea">초점을 잃지 않고 아이디어, 생각 및 작업을 전달하는 가장 효과적인 방법</string>
     <string name="plus_you_kpd">효율성을 향상시키는 가장 좋은 방법 중 하나</string>
@@ -58,7 +58,7 @@
     <string name="change_theme">주제를 바꾸다</string>
     <string name="planner">Planner</string>
     <string name="add_event">이벤트 추가</string>
-    <string name="walk_dog">개를 산책시키다</string>
+    <string name="go_meet">개를 산책시키다</string>
     <string name="begin">스타트</string>
     <string name="begin_time">시간의 시작</string>
     <string name="end_time">시간의 끝</string>
@@ -257,7 +257,7 @@
 그리고 지출 한 총 금액을보십시오. 또한,에 의해
 오른쪽으로 스 와이프하면 잦은 지출자 목록에서 항목을 제거할 수 있습니다.
    </string>
-    <string name="home_menu">중요한 것은</string>
+    <string name="main">중요한 것은</string>
     <string name="finance">금융</string>
     <string name="set_notification">알림 설정</string>
     <string name="you_forgot_habbit">\"당신은 습관을 잊지 않았습니다\"</string>
@@ -317,4 +317,13 @@
     <string name="black">Черный</string>
     <string name="green">Зелёный</string>
     <string name="white">Белый</string>
+    <string name="add_some_event">Введите определенное событие</string>
+    <string name="create_event">Создание события</string>
+    <string name="remind">Напомнить</string>
+    <string name="fill_field">Заполните поле</string>
+    <string name="new_idea">Новая идея</string>
+    <string name="new_category">Новая категория</string>
+    <string name="category_name">Название категории</string>
+    <string name="icon">Иконка</string>
+    <string name="new_habit">Новая привычка</string>
 </resources>
